# toro

./: .gitignore  CMakeLists.txt  Lexer.cpp  Lexer.h  Lexer_Test.cpp  Lexer_Test.h  README.md  README.me  a.out  build.sh  input.toro  main.cpp  output.cpp  output.py
abstract_emitter/: Emitter.cpp  Emitter.h
compilation_error/: CompilationError.cpp  CompilationError.h
cpp_emitter/: CppEmitter.cpp  CppEmitter.h
emitter/: Emitter.h
lexer/: Lexer.cpp  Lexer.h  Lexer_Test.cpp  Lexer_Test.h  Token.h  build_test.sh  lexer_test0.txt  main.cpp
lexer/tests/: successful_test0.txt  successful_test1.txt  tests_output.h
lexer_tests/: lexer_test0.txt
parser/: Emiter_Query.h  Parser.cpp  Parser.h  Parser_Test.cpp  Parser_Test.h  build_test.sh  main.cpp  parser_tests.h  test0.txt
python_emitter/: PythonEmitter.cpp  PythonEmitter.h
scope_manager/: ScopeManager.cpp  ScopeManager.h
token_iterator/: TokenIterator.cpp  TokenIterator.h
